fix: add `overflow-y: scroll` to `html`

--- a/site/src/index.css
+++ b/site/src/index.css
@@ -108,14 +108,13 @@
 	There’s a related issue on GitHub: Radix UI Primitives Issue #3251
 	https://github.com/radix-ui/primitives/issues/3251
 	 */
-	html body[data-scroll-locked] {
-		--removed-body-scroll-bar-size: 0;
-		margin-right: 0;
+	html {
+		overflow-y: scroll !important;
 	}
 
-	/* Prevent layout shift when modals open by maintaining scrollbar width */
-	html {
-		scrollbar-gutter: stable;
+	html body[data-scroll-locked] {
+		--removed-body-scroll-bar-size: 0;
+		margin-right: 0 !important;
 	}
 
 	/*
